# render_engine

./: .gitignore  Cargo.toml  README.md  build.rs
assets/models/: asteroid.mtl  asteroid2.mtl  blue_star.mtl  texture_cone.mtl  texture_cube.mtl  texture_sphere.mtl  yellow_star.mtl
assets/shaders/: first_pass_frag.glsl  first_pass_vertex.glsl  second_pass_frag.glsl  second_pass_vertex.glsl  shadowVertex.glsl  vertexShader.glsl
debug_logs/: gameplay_byte_lookup.txt  gameplay_history.txt  initial_camera.txt
notes/: playback.txt  shader_generation
render_engine_assets/shaders/: first_pass_frag.glsl  second_pass_frag.glsl  second_pass_vertex.glsl
space_game_assets/models/: asteroid.mtl  asteroid2.mtl  blue_star.mtl  yellow_star.mtl
src/: lib.rs  main.rs
src/culling/: logic_frustum_culler.rs  mod.rs  render_frustum_culler.rs  trait.rs
src/exports/: camera_object.rs  entity_transformer.rs  light_components.rs  load_models.rs  logic_components.rs  mod.rs  movement_components.rs  movement_forces_components.rs  rendering.rs  user_focused_entities.rs
src/flows/: logic_flow.rs  mod.rs  pipeline.rs  render_flow.rs  shadow_flow.rs  shared_constants.rs  visible_world_flow.rs
src/helper_things/: aabb_helper_functions.rs  cpu_usage_reducer.rs  entity_change_helpers.rs  environment.rs  game_loader.rs  mod.rs  round_robin_indexer.rs
src/models/: mod.rs  model_definitions.rs  model_storage.rs
src/object_components/: existence_components.rs  mod.rs  remaining_components.rs
src/objects/: ecs.rs  entity_change_request.rs  entity_enforcers.rs  entity_id.rs  mod.rs  (+1 more)
(+45 files in other folders)
