[package]
name = "render_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "render_engine"
path = "src/lib.rs"

[[bin]]
name = "space_game"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
float-cmp = "0.8.0"
gl = "0.14.0"
hashbrown = { version = "0.12.0", features = ["serde"] }
lazy_static = "1.4.0"
nalgebra-glm = { version =  "0.11.0", features = ["serde-serialize"] }
parking_lot = "0.11.1"
rayon = "1.5.0"
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
stb_image = "0.2.3"
threadpool = "1.8.1"
tobj = "2.0.4"

[dependencies.glfw]
version = "0.41.0"
default-features = false
